--- a/index.html
+++ b/index.html
@@ -8,14 +8,27 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-logo">
-            Header Logo
+        <div class="nav">
+            <div class="header-logo">
+                Header Logo
+            </div>
+            <ul class="header-links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
         </div>
-        <ul class="header-links">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
+    
+        <div class="hero">
+            <div class="left-hero">
+                <h1 class="hero-header">This website shows my basic HTML/CSS knowledge</h1>
+                <p class="hero-text">This is some random subtext</p>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <div class="right-hero">
+                <img src="./images/hero.png" alt="image of funny triangle">
+            </div>
+        </div>
     </div>
 </body>
 </html>
