Add info container

--- a/index.html
+++ b/index.html
@@ -30,5 +30,25 @@
             </div>
         </div>
     </div>
+
+    <div class="info-title">Some random information</div>
+    <div class="info">
+        <div class="content">
+            <div class="placeholder"></div>
+            some subtext under an illustration or image
+        </div>
+        <div class="content">
+            <div class="placeholder"></div>
+            some subtext under an illustration or image
+        </div>
+        <div class="content">
+            <div class="placeholder"></div>
+            some subtext under an illustration or image
+        </div>
+        <div class="content">
+            <div class="placeholder"></div>
+            some subtext under an illustration or image
+        </div>
+    </div>
 </body>
 </html>
