Add quote section

--- a/index.html
+++ b/index.html
@@ -50,5 +50,14 @@
             some subtext under an illustration or image
         </div>
     </div>
+
+    <div class="quote">
+        <div class="quote-text">
+            Be courageous. Challenge orthodoxy. Stand up for what you believe in. When you are in your rocking chair talking to your grandchildren many years from now, be sure you have a good story to tell.
+        </div>
+        <div class="quote-author">
+            -Amal Clooney
+        </div>
+    </div>
 </body>
 </html>
