--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="nav">
+        <header class="nav">
             <div class="header-logo">
                 Header Logo
             </div>
@@ -17,7 +17,7 @@
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
-        </div>
+        </header>
     
         <div class="hero">
             <div class="left-hero">
@@ -58,6 +58,14 @@
         <div class="quote-author">
             -Amal Clooney
         </div>
+    </div>
+
+    <div class="signup">
+        <div class="left-signup">
+            <div class="signup-header">Call to action! It's time!</div>
+            <div class="signup-text">Sign up for our product by clicking that button over there!</div>
+        </div> 
+        <button class="signup-button">Sign up</button>
     </div>
 </body>
 </html>
