--- a/index.html
+++ b/index.html
@@ -67,5 +67,7 @@
         </div> 
         <button class="signup-button">Sign up</button>
     </div>
+
+    <footer> Copyright&nbsp<a href="https://github.com/Stapleru">©Stapleru</a>&nbsp2023</footer>
 </body>
 </html>
